force-app/main/default/objects/IdeaBoard__c/IdeaBoard__c.object-meta.xml
<CustomObject>
    <description>Agoura Custom Object</description>
    <label>Idea Board</label>
    <nameField>
        <displayFormat>IDEA-{0000000000}</displayFormat>
        <label>Idea Unique Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Idea Boards</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>