force-app/main/default/objects/IdeaBoard__c/fields/Channels__c.field-meta.xml
<CustomField>
    <fullName>Channels__c</fullName>
    <label>Channels</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>