force-app/main/default/objects/IdeaBoard__c/fields/Cost_Structure__c.field-meta.xml
<CustomField>
    <fullName>Cost_Structure__c</fullName>
    <label>Cost Structure</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>