force-app/main/default/objects/IdeaBoard__c/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <label>Customer Segment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>