force-app/main/default/objects/IdeaBoard__c/fields/Early_Adopters__c.field-meta.xml
<CustomField>
    <fullName>Early_Adopters__c</fullName>
    <label>Early Adopters</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>