force-app/main/default/objects/IdeaBoard__c/fields/Existing_Alternatives__c.field-meta.xml
<CustomField>
    <fullName>Existing_Alternatives__c</fullName>
    <label>Existing Alternatives</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>