force-app/main/default/objects/IdeaBoard__c/fields/High_Level_Concept__c.field-meta.xml
<CustomField>
    <fullName>High_Level_Concept__c</fullName>
    <label>High Level Concept</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>