force-app/main/default/objects/IdeaBoard__c/fields/Key_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Key_Metrics__c</fullName>
    <label>Key Metrics</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>