force-app/main/default/objects/IdeaBoard__c/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <label>Problem</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>