force-app/main/default/objects/IdeaBoard__c/fields/Revenue_Streams__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Streams__c</fullName>
    <label>Revenue Streams</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>