force-app/main/default/objects/IdeaBoard__c/fields/Unfair_Advantage__c.field-meta.xml
<CustomField>
    <fullName>Unfair_Advantage__c</fullName>
    <label>Unfair Advantage</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>