force-app/main/default/objects/IdeaBoard__c/fields/Unique_Value_Proposition__c.field-meta.xml
<CustomField>
    <fullName>Unique_Value_Proposition__c</fullName>
    <label>Unique Value Proposition</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>